# api/product.go
@@ -85,6 +85,26 @@ func noopProductGet() {}
 // @Router /product/{id}/delete [get]
 func noopProductDelete() {}
 
+// @Summary 导出产品
+// @Schemes
+// @Description 导出产品
+// @Tags product
+// @Accept json
+// @Produce octet-stream
+// @Router /product/export [get]
+func noopProductExport() {}
+
+// @Summary 导入产品
+// @Schemes
+// @Description 导入产品
+// @Tags product
+// @Param file formData file true "压缩包"
+// @Accept mpfd
+// @Produce json
+// @Success 200 {object} ReplyData[int64] 返回产品数量
+// @Router /product/import [post]
+func noopProductImport() {}
+
 func productRouter(app *gin.RouterGroup) {
 
 	app.POST("/count", curd.ApiCount[model.Product]())
@@ -108,4 +128,7 @@ func productRouter(app *gin.RouterGroup) {
 		return nil
 	}))
 
+	app.GET("/export", curd.ApiExport[model.Product]("product"))
+	
+	app.POST("/import", curd.ApiImport[model.Product]())
 }
